--- a/App/Voltflow/Voltflow.csproj
+++ b/App/Voltflow/Voltflow.csproj
@@ -17,5 +17,6 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.3" />
     <PackageReference Include="Mapsui.Avalonia" Version="4.1.8" />
+    <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
   </ItemGroup>
 </Project>
