--- a/App/Voltflow/Voltflow.csproj
+++ b/App/Voltflow/Voltflow.csproj
@@ -19,4 +19,10 @@
     <PackageReference Include="Mapsui.Avalonia" Version="4.1.8" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\TestView.axaml.cs">
+      <DependentUpon>TestView.axaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
