Add 2FA login to server

--- a/VoltflowAPI/appsettings.Template.json
+++ b/VoltflowAPI/appsettings.Template.json
@@ -10,5 +10,11 @@
   },
   "Jwt": {
     "Key": "hash -> has to be at least 256bit"
+  },
+  "Email": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Email": "user@email.com",
+    "Password": "pass"
   }
 }
