--- a/App/Voltflow/Voltflow.csproj
+++ b/App/Voltflow/Voltflow.csproj
@@ -29,9 +29,15 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.3" />
     <PackageReference Include="IconPacks.Avalonia" Version="1.0.0" />
+    <PackageReference Include="Irihi.Ursa" Version="1.8.0" />
+    <PackageReference Include="Irihi.Ursa.Themes.Semi" Version="1.8.0" />
     <PackageReference Include="Mapsui.Avalonia" Version="4.1.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
+    <PackageReference Include="Semi.Avalonia" Version="11.2.1.4" />
+    <PackageReference Include="Semi.Avalonia.ColorPicker" Version="11.2.1.4" />
+    <PackageReference Include="Semi.Avalonia.DataGrid" Version="11.2.1.4" />
+    <PackageReference Include="Semi.Avalonia.TreeDataGrid" Version="11.0.10.1" />
   </ItemGroup>
 
   <ItemGroup>
