--- a/App/Voltflow/Voltflow.csproj
+++ b/App/Voltflow/Voltflow.csproj
@@ -32,6 +32,7 @@
     <PackageReference Include="Irihi.Ursa" Version="1.8.0" />
     <PackageReference Include="Irihi.Ursa.Themes.Semi" Version="1.8.0" />
     <PackageReference Include="Mapsui.Avalonia" Version="4.1.8" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Quick.AvaloniaFonts.Roboto" Version="1.0.0" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
