--- a/App/Voltflow/Voltflow.csproj
+++ b/App/Voltflow/Voltflow.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="IconPacks.Avalonia" Version="1.0.0" />
     <PackageReference Include="Irihi.Ursa" Version="1.8.0" />
     <PackageReference Include="Irihi.Ursa.Themes.Semi" Version="1.8.0" />
+    <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-rc5.4" />
     <PackageReference Include="Mapsui.Avalonia" Version="4.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
