Add statistics panel

--- a/App/Voltflow/Voltflow.csproj
+++ b/App/Voltflow/Voltflow.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.2.3" />
     <PackageReference Condition="$(DefineConstants.Contains(ENABLE_XAML_HOT_RELOAD))" Include="Avalonia.Markup.Xaml.Loader" Version="11.2.3" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.2.0.8" />
     <PackageReference Include="Config.Net" Version="5.2.1" />
