--- a/App/Voltflow.Browser/Voltflow.Browser.csproj
+++ b/App/Voltflow.Browser/Voltflow.Browser.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.Browser" Version="11.2.3" />
+    <PackageReference Include="Avalonia" Version="11.2.4" />
+    <PackageReference Include="Avalonia.Browser" Version="11.2.4" />
   </ItemGroup>
 
   <ItemGroup>
