--- a/App/Voltflow.Desktop/Voltflow.Desktop.csproj
+++ b/App/Voltflow.Desktop/Voltflow.Desktop.csproj
@@ -10,7 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.Desktop" Version="11.2.3" />
+    <PackageReference Include="Avalonia" Version="11.2.4" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.2.4" />
   </ItemGroup>
 
   <ItemGroup>
