--- a/App/Voltflow.iOS/Voltflow.iOS.csproj
+++ b/App/Voltflow.iOS/Voltflow.iOS.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia.iOS" Version="11.2.3" />
+    <PackageReference Include="Avalonia" Version="11.2.4" />
+    <PackageReference Include="Avalonia.iOS" Version="11.2.4" />
   </ItemGroup>
 
   <ItemGroup>
