--- a/App/Voltflow.Android/Voltflow.Android.csproj
+++ b/App/Voltflow.Android/Voltflow.Android.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.2.4" />
     <PackageReference Include="Avalonia.Android" Version="11.2.4" />
+    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.15.0.2" />
     <PackageReference Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.14" />
   </ItemGroup>
 
