Add all data to grids

--- a/App/Voltflow/Voltflow.csproj
+++ b/App/Voltflow/Voltflow.csproj
@@ -98,6 +98,9 @@
     <Compile Update="Views\Pages\Charging\TransactionView.axaml.cs">
       <DependentUpon>TransactionView.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\Pages\Statistics\StatisticsGridDataView.axaml.cs">
+      <DependentUpon>StatisticsGridDataView.axaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
