--- a/App/Voltflow/Voltflow.csproj
+++ b/App/Voltflow/Voltflow.csproj
@@ -29,7 +29,7 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.2.4" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.4" />
-    <PackageReference Include="IconPacks.Avalonia" Version="1.0.0" />
+    <PackageReference Include="IconPacks.Avalonia.MaterialDesign" Version="1.0.0" />
     <PackageReference Include="Irihi.Ursa" Version="1.8.1" />
     <PackageReference Include="Irihi.Ursa.Themes.Semi" Version="1.8.1" />
     <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-rc5.4" />
